# Databricks-Environment-Test

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLUSTERING_IMPLEMENTATION_ORDER.md  IMPLEMENTATION_JOURNAL.md  Makefile  README.md  SCENARIO_EXPANSION_PLAN.md  SCENARIO_IMPLEMENTATION_CHECKLIST.md  SCENARIO_QUICK_REFERENCE.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
archive/: CLUSTERING_IMPLEMENTATION_PLAN.md  README.md
research/: DATABRICKS_ENFORCEMENT_BEHAVIORS.md  FEASIBILITY_CHECK_TEMPLATE.md  README.md  SCENARIO_IMPLEMENTATION_TRACKER.md  SCENARIO_JOURNAL_TEMPLATE.md
research/clustering/cluster_by_auto/: CLUSTER_BY_AUTO_FEASIBILITY_CHECK.md  CLUSTER_BY_AUTO_IMPLEMENTATION.md  CLUSTER_BY_AUTO_IMPLEMENTATION_JOURNAL.md  feasibility_test_cluster_by_auto.py
research/clustering/cluster_exclusion/: CLUSTER_EXCLUSION_FEASIBILITY_CHECK.md  CLUSTER_EXCLUSION_IMPLEMENTATION.md  CLUSTER_EXCLUSION_JOURNAL.md
research/clustering/delta_auto_optimization/: DELTA_AUTO_OPTIMIZATION_IMPLEMENTATION.md
research/clustering/explicit_clustering_columns/: EXPLICIT_CLUSTERING_COLUMNS_FEASIBILITY_CHECK.md  EXPLICIT_CLUSTERING_COLUMNS_IMPLEMENTATION.md  feasibility_test_clustering_detection.py
research/clustering/small_tables_auto_exemption/: DATABRICKS_DESCRIBE_TABLE_INVESTIGATION.md  DATABRICKS_SDK_SCHEMA_DETECTION_RESEARCH.md  LAYER_2_CODE_REVIEW_PROMPT.md  LAYER_3_PRODUCTION_CODE_REVIEW_REQUEST.md  LAYER_3_PRODUCTION_REVIEW_PROMPT.md  SMALL_TABLES_AUTO_EXEMPTION_FEASIBILITY_CHECK.md  SMALL_TABLES_AUTO_EXEMPTION_IMPLEMENTATION.md  SMALL_TABLES_AUTO_EXEMPTION_IMPLEMENTATION_TRACKER.md  SMALL_TABLES_AUTO_EXEMPTION_JOURNAL.md  feasibility_test_table_size.py  test_table_size_detection.py
research/clustering_exclusion/: FINAL_CODE_REVIEW_OUTPUT.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  PHASE4_CODE_REVIEW_PROMPT.md
research/documentation/column_coverage_threshold/: COLUMN_COVERAGE_THRESHOLD_FEASIBILITY_CHECK.md
research/documentation/comment_length/: COMMENT_LENGTH_IMPLEMENTATION.md  feasibility_test_comment_length.py
research/documentation/critical_columns_documentation/: CRITICAL_COLUMNS_FEASIBILITY_CHECK.md  CRITICAL_COLUMNS_IMPLEMENTATION_JOURNAL.md
research/documentation/placeholder_detection/: PLACEHOLDER_DETECTION_RESEARCH.md
results/: __init__.py  results.py  show_session.py
tests/: __init__.py
tests/config/: __init__.py  clustering_config.yaml  documentation_config.yaml
tests/features/: databricks__clustering__compliance.feature  databricks__documentation__compliance.feature
tests/features/todo/: databricks__jobs__compliance.feature  databricks__maintenance__compliance.feature  databricks__metadata__compliance.feature  databricks__performance__compliance.feature
tests/fixtures/: table_factory.py
tests/fixtures/clustering/: __init__.py  cluster_by_auto_specs.py  cluster_exclusion_specs.py  delta_auto_optimization_specs.py  explicit_clustering_specs.py  size_exemption_specs.py
tests/fixtures/documentation/: column_coverage_specs.py  critical_columns_specs.py  placeholder_detection_specs.py  table_comment_specs.py
tests/integration/: __init__.py
tests/integration/clustering/: __init__.py  test_cluster_by_auto_integration.py  test_cluster_exclusion_integration.py  test_delta_auto_optimization_integration.py  test_explicit_clustering_columns_integration.py  (+1 more)
tests/step_definitions/: __init__.py  clustering_steps.py  documentation_steps.py
tests/utils/: __init__.py  clustering_config_loader.py  config_loader.py  discovery.py  discovery_engine.py  schema_detector.py
tests/validators/: __init__.py  clustering.py  comprehensive.py  documentation.py
(+18 files in other folders)
